--- a/files/main.css
+++ b/files/main.css
@@ -46,7 +46,7 @@ ol.unstyled, ul.unstyled {margin: 0;padding: 0;list-style: none;}
 .flex-center {display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-align: center;-webkit-align-items: center;-webkit-box-align: center;align-items: center;-webkit-justify-content: center;justify-content: center;}
 .flex-stretch {display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-align: flex-start;-webkit-align-items: stretch;-webkit-box-align: stretch;align-items: stretch;}
 .justify-between {justify-content: space-between;}
-.mask {overflow: hidden;mask-image: linear-gradient(to bottom, black 50%, transparent 90%);}
+.mask {overflow: hidden;mask-image: linear-gradient(to bottom, black 50%, transparent 90%);-webkit-mask: linear-gradient(to bottom, black 50%, transparent 90%);}
 .noscript {position: relative;text-align: center;background-color: #FFA5D8;color: #ffffff;padding: 1rem;}
 .blockquote {padding: 0 0 0 1rem;margin: 0 0 1.5rem;border-left: .25rem solid #FFA5D8;}
 .DescriptionBlock {margin: 2rem 0 0 0;}
@@ -66,7 +66,7 @@ ol.unstyled, ul.unstyled {margin: 0;padding: 0;list-style: none;}
 /**************************************/
 input, select, textarea {width: 100%;height: 50px;padding: 0 1rem;color: #3B2865;background-color: #ffffff;border-color: #E3DDEE;border-width: 3px;border-style: solid;border-radius: 40px;outline: 0;font-size: 1rem;font-weight: 400;font-family: 'Comfortaa', cursive;-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 input:focus, select:focus, textarea:focus {border-color: #FFA5D8;}
-textarea {height: auto;min-height: 50px;padding-top: .5rem;}
+textarea {height: auto;min-height: 50px;padding-top: .75rem;}
 select {cursor: pointer;}
 input.error {border-color: red;}
 input[type="file"] {margin-top: 0.25rem;height: auto;line-height: 1;border: 0;padding: 0;border-radius: 0;background: transparent;}
@@ -107,7 +107,7 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 .selectBox {position: relative;}
 .selectBox:after {content: '\e901';color: #CBC3DB;line-height: 2.5rem;right: .25rem;position: absolute;font-family: 'icomoon';pointer-events: none;}
-.selectBox select {padding: 0 1.25rem 0 1rem;max-width: 15rem;width: auto;border: 0;background-color: transparent;font-weight: bold;}
+.selectBox select {padding: 0 1.25rem 0 1rem;border: 0;background-color: transparent;font-weight: bold;}
 .selectBox:hover:after {color: #FFA5D8;}
 
 
@@ -116,15 +116,18 @@ textarea.error:-ms-input-placeholder {color: red;}
 /**************************************/
 .button, button, [class^="button-"], .paymentFormSubmitLink, .paymentFormTbodySubmitButton {color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);border-radius: 30px;padding: 0 40px;line-height: 50px;border: 0;text-align: center;font-size: 1rem;font-family: 'Comfortaa', cursive;cursor: pointer;display: inline-block;position: relative;transition: all 0.3s ease;}
 .button:hover, button:hover, [class^="button-"]:hover, .paymentFormSubmitLink:hover, .paymentFormTbodySubmitButton:hover, .button.active, .button.opened, [class^="button-"].active, [class^="button-"].opened {color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
-
+.button2 {color: #FFA5D8;background: #ffffff;border: 2px solid #FFA5D8;line-height: 46px;}
+.button2:hover {color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);border-color: #FFA5D8;}
+.button3 {color: #ffffff;background: #CBC3DB;border: 2px solid #ffffff;line-height: 46px;}
+.button3:hover {color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);border-color: #ffffff;}
 
 .button5 {font-weight: 600;}
-.button5 i {font-size: 1.25rem;line-height: 1;margin-right: .5rem;transition: all 0.3s ease;vertical-align: middle;display: inline-block;}
-.button5 span {vertical-align: middle;display: inline-block;}
+.button5 i {font-size: 1.25rem;line-height: 1;margin-right: .5rem;transition: all 0.3s ease;vertical-align: bottom;display: inline-block;}
+.button5 span {vertical-align: bottom;display: inline-block;width: calc(100% - 2.075rem);}
 .button5.active i, .button5:hover i {transform: rotate(90deg);}
 .button5.active:hover i {transform: rotate(0deg);}
-.button.empty {color: #656d72;background-color: #eef2f5;}
-.button.empty:hover {color: #656d72;background-color: #eef2f5;}
+.button.empty {color: #ffffff;background-color: #CBC3DB;}
+.button.empty:hover {color: #ffffff;background-color: #CBC3DB;}
 .small {line-height: 2rem;padding: 0 1rem;font-size: .875rem;}
 .remove i, .fancybox-close-small i {transition: all 0.3s ease;display: inline-block;}
 .remove:hover i, .fancybox-close-small:hover i {transform: rotate(90deg);}
@@ -157,15 +160,15 @@ textarea.error:-ms-input-placeholder {color: red;}
 /*** Рейтинг Товаров ***/
 /**************************************/
 .ratings {display: inline-block;position: relative;vertical-align: middle;line-height: 0;overflow: hidden;}
-.ratings:before {font-size: 1.25rem;color: #70787D;line-height: 1;font-family: 'icomoon';content: '\e91a\e91a\e91a\e91a\e91a';letter-spacing: .25rem;}
+.ratings:before {font-size: 1.25rem;color: #E3DDEE;line-height: 1;font-family: 'icomoon';content: '\e920\e920\e920\e920\e920';letter-spacing: .25rem;}
 .ratings .rating {position: absolute;left: 0;top: 0;overflow: hidden;}
-.ratings .rating:before {font-size: 1.25rem;color: #FFA5D8;line-height: 1;white-space:nowrap;font-family: 'icomoon';content: '\e91a\e91a\e91a\e91a\e91a';letter-spacing: .25rem;}
+.ratings .rating:before {font-size: 1.25rem;color: #FFDA7A;line-height: 1;white-space:nowrap;font-family: 'icomoon';content: '\e920\e920\e920\e920\e920';letter-spacing: .25rem;}
 .stars {overflow: hidden;}
-.star {margin: 0 .125rem;color: #70787D;width: 1.25rem;height: 1.25rem;line-height: 1.25rem;font-size: 1.25rem;white-space: nowrap;float:left;cursor: pointer;zoom:1;display:block;}
-.star:after {content: '\e91a';font-family: 'icomoon';}
-.stars .fullStar {color: #FFA5D8;}
-.stars .tmp_fs {color: #FFA5D8;}
-.stars .tmp_es {color: #70787D;}
+.star {margin: 0 .125rem;color: #E3DDEE;width: 1.25rem;height: 1.25rem;line-height: 1.25rem;font-size: 1.25rem;white-space: nowrap;float:left;cursor: pointer;zoom:1;display:block;}
+.star:after {content: '\e920';font-family: 'icomoon';}
+.stars .fullStar {color: #FFDA7A;}
+.stars .tmp_fs {color: #FFDA7A;}
+.stars .tmp_es {color: #E3DDEE;}
 
 
 /**************************************/
@@ -343,14 +346,16 @@ h6 {font-size: 0.875rem;}
 .form__fields.two {-webkit-justify-content: space-between;justify-content: space-between;}
 .form__fields.two .form__field {width: 48%;margin-top: 0;display: flex;flex-wrap: wrap;align-items: center;}
 .form__fields input {transition: all 0.3s ease;}
+.form__fields-icons label {display: none;}
 .form__fields-icons input {padding-left: 50px;}
+.form__fields-icons textarea {padding-left: 50px;}
 .form__fields-icons i {width: 36px;height: 36px;line-height: 36px;font-size: 18px;color: #ffffff;background-color: #E3DDEE;border-radius: 100%;display: inline-block;text-align: center;position: absolute;top: 7px;left: 7px;}
 .form__fields-icons input:focus + i {background-color: #FFA5D8;}
+.form__fields-icons textarea:focus + i {background-color: #FFA5D8;}
 .form__field {position: relative;}
 .form__pp {font-size: .75rem;margin-top: 1rem;color: #CBC3DB;text-align: center;}
 .form__pp a {text-decoration: underline;display: inline-block;}
 .form__buttons {margin-top: 1rem;}
-.form__field i {position: absolute;top: 0;left: 0;font-size: 24px;width: 40px;height: 40px;display: none;align-items: center;justify-content: center;}
 .form__text {text-align: center;}
 @media all and (max-width: 767.98px) {
 	.form__fields {margin-bottom: 1rem;}
@@ -1116,7 +1121,7 @@ h6 {font-size: 0.875rem;}
 /* Анимация для кнопок */
 .products__list .product__addCart a:after {content: "";background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);position: absolute;z-index: -1;top: 0;left: 0;right: 0;bottom: 0;overflow: hidden;-webkit-transform: scaleX(0);-moz-transform: scaleX(0);-o-transform: scaleX(0);-ms-transform: scaleX(0);transform: scaleX(0);-webkit-transform-origin: 0 50%;transform-origin: 0 50%;-webkit-transition-property: transform;transition-property: transform;-webkit-transition-duration: 0.3s;transition-duration: 0.3s;-webkit-transition-timing-function: ease-out;transition-timing-function: ease-out;border-radius: 100%;-moz-border-radius: 100%;-webkit-border-radius: 100%;-khtml-border-radius: 100%;}
 .products__list .product__addCart a:hover:after {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);-webkit-transform: scale(1);-moz-transform: scale(1);-o-transform: scale(1);-ms-transform: scale(1);transform: scaleX(1);}
-/* Анимация для кнопок */
+/* Рейтинг */
 .products__list .product__ratings {position: relative;justify-content: center;margin-bottom: 1rem;}
 .products__list .product__ratings-icon {font-size: 3rem;line-height: 1;color: #E3DDEE;}
 .products__list .product__ratings-value {position: absolute;}
@@ -1278,13 +1283,15 @@ h6 {font-size: 0.875rem;}
 #pdt__sales .owl-nav {position: initial;bottom: auto;right: auto;width: auto;margin: 0;}
 #pdt__sales .owl-nav:before {display: none;}
 /* Распродажа. Товар */
-#pdt__sales .product__item {border-radius: 0 20px 20px 0;}
+#pdt__sales .product__item {border-radius: 0 20px 20px 0;border: 0;}
 #pdt__sales .product__image {width: 260px;}
 #pdt__sales .product__shop {width: calc(100% - 260px);padding: 1rem;}
 #pdt__sales .product__name {font-size: 1.25rem;max-height: 3.25rem;height: auto;margin: 1rem 0;display: block;overflow: hidden;}
 #pdt__sales .product__price {margin: 1rem 0;}
 #pdt__sales .product__addto i {display: none;}
 #pdt__sales .product__addCart {margin-right: 5px;}
+#pdt__sales .product__links a {margin: 0 4px;width: 40px;height: 40px;line-height: 40px;font-size: 18px;color: #FFA5D8;border: 2px solid #FFA5D8;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;display: block;text-align: center;transition: all 0.3s ease;position: relative;}
+#pdt__sales .product__links a:hover {color: #ffffff;background-color: #FFA5D8;border-color: #FFA5D8;}
 /* Распродажа. Окончание акции */
 .product__counter {font-size: 1.25rem;font-weight: bold;color: #FFA5D8;line-height: 1;}
 .product__counter .separator {margin: 0 .5rem;}
@@ -1407,7 +1414,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 .toolbar {margin-bottom: 2rem;}
 .toolbar label {margin-right: .5rem;}
-.toolbar .selectBox select {padding-left: .5rem;height: 30px;}
+.toolbar .selectBox select {padding-left: .5rem;height: 30px;width: auto;max-width: 15rem;}
 .toolbar [class*="-by"] {margin-right: 4rem;}
 .toolbar [class*="-by"]:last-child {margin-right: 0;}
 .toolbar-bottom {margin-top: 1.5rem;}
@@ -1440,37 +1447,159 @@ h6 {font-size: 0.875rem;}
 
 
 
+/**************************************/
+/*** Форма карточки товара ***/
+/**************************************/
+.productView__images {width: 462px;position: sticky;top: 0;}
+.productView__image {position: relative;}
+.productView__image img {border-radius: 20px;max-height: 462px;}
+.thumblist__items {margin: 0 -10px;}
+.thumblist__item {margin: 10px 10px 0 10px;}
+.thumblist__image {width: 100px;height: 100px;background-color: #ffffff;border-radius: 20px;}
+.thumblist__item img {border-radius: 20px;}
+.productView__shop {width: calc(100% - 462px);padding-left: 20px;}
+.productView__margin {margin-bottom: 1rem;}
+.productView__name {font-weight: bold;font-family: 'Comfortaa', cursive;}
+.productView__articles {color: #CBC3DB;}
+.productView__price {flex-grow: 1;}
+/* Товар. Иконки */
+.productView__icon {text-align: center;margin-bottom: 1.5rem;}
+.productView__icon i {font-size: 40px;line-height: 1;}
+.productView__icon span {display: block;margin-top: .5rem;}
+/* Товар. Наличие */
+.productView__available.empty {color: #DE4F8B;}
+.productView__available.alot {color: #9579D1;}
+.productView__available.few {color: #7EB8DA;}
+/* Товар. Средний рейтинг */
+.productView__ratings {position: relative;}
+.productView__ratings-icon {color: #E3DDEE;font-size: 40px;line-height: 1;}
+.productView__ratings-value {position: absolute;}
+.has-rating .productView__ratings-icon {color: #FFDA7A;}
+/* Товар. Акции */
+.productView__campaign {color: #9579D1;}
+.productView__campaign span {font-weight: bold;}
+.productView__campaign-percent {margin-left: 2rem;font-size: 30px;line-height: 1;width: 100px;height: 40px;line-height: 40px;color: #ffffff;background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);border-radius: 5px;text-align: center;font-family: 'Cormorant Infant', serif;}
+/* Количество */
+.qty input {width: 88px;height: 40px;border: 2px solid #E3DDEE;border-radius: 5px 0 0 5px;text-align: center;}
+.qty a {width: 40px;height: 40px;background-color: #E3DDEE;color: #CBC3DB;}
+.qty a + a {margin-left: 2px;border-radius: 0 5px 5px 0;}
+.qty a:hover {color: #FFA5D8;}
+/* Товар. Модификации */
+.goodsModificationsBlock {display: grid;gap: 20px;grid-template-columns: repeat(2, 1fr);}
+.goodsModificationsProperty {background-color: #ffffff;border-radius: 10px;padding: 10px 30px 10px 10px;position: relative;}
+.goodsModificationsProperty label {color: #CBC3DB;font-weight: bold;margin-bottom: .25rem;display: block;}
+.goodsModificationsProperty select {height: 20px;padding: 0;}
+.goodsModificationsProperty .selectBox {position: initial;}
+.goodsModificationsProperty .selectBox:after {line-height: 20px;top: calc(50% - 10px);right: 10px}
+/* Товар. Добавление в корзину, избранное, сравнение, уведомить, быстрый заказ */
+.productView .add-notify {display: none;}
+.productView.empty .add-notify {display: inline-block;margin: 0 !important;flex-grow: .5;}
+.productView.empty .add-cart {display: none;}
+.productView__links a span {display: none;}
+.productView__links a {margin-left: 1rem;width: 60px;height: 60px;line-height: 62px;font-size: 24px;color: #FFA5D8;background-color: #ffffff;border: 2px solid #FFA5D8;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;text-align: center;}
+.productView__links a:hover {color: #ffffff;background-color: #FFA5D8;}
+.productView__addto .button {height: 60px;line-height: 60px;flex-grow: 1;font-size: 18px;}
+.productView__addto .button + .button {margin-left: 1rem;}
+.productView__addto .button i {display: none;}
+.productView__addto .quick {flex-grow: .5;}
+/*** . Адаптивность ***/
+@media (max-width: 1199px) {
+	.productView__images {width: 100%;position: relative;top: auto;}
+	.productView__shop {width: 100%;padding: 20px 0 0 0;}
+}
+@media (max-width: 639px) {
+	.productView__addto .button {width: 100%;margin-bottom: 1rem;}
+	.productView__addto .button + .button {margin: 0;width: auto;flex-grow: 1;}
+	.thumblist__image {width: 96px;height: 96px;}
+	.productView__campaign-percent {flex-grow: 1;}
+	.productView__name {font-size: 1.5rem;}
+}
+@media (max-width: 479px) {
+	.productView__addto .button + .button {padding: 0 2rem;}
+	.productView__links a {margin-left: .5rem;}
+	.productView__icon i {font-size: 30px;}
+	.productView__inner.justify-between {flex-wrap: nowrap;}
+	.productView__campaign-percent {width: 100%;margin: 0 0 1rem 0;}
+	.goodsModificationsBlock {display: block;}
+	.goodsModificationsProperty {margin-bottom: 1rem;}
+	.productView__addto .add-notify {margin-bottom: 1rem !important;}
+}
+@media (max-width: 374px) {
+	.thumblist__image {width: 82px;height: 82px;}
+}
 
-.productView__image {width: 462px;height: 462px;border-radius: 20px;}
-.productView__image img {border-radius: 20px;}
 
+/*** Товар. Табы ***/
+.productView__tabs {margin-top: 3rem;}
+.productView__title {font-size: 20px;font-weight: bold;text-align: left;margin-bottom: 1rem;}
+.productView__content {max-height: 124px;overflow: hidden;}
+.productView__content.active {max-height: 100%;}
+.productView__buttons, .features__buttons {margin-top: 1rem;display: none;}
+.productView__tabs .button5 span {text-decoration: underline;}
+.productView__tabs .button5.active span, .button5:hover span {text-decoration: none;}
+[data-tab-content] {margin-bottom: 2rem;}
+[data-tab-content]:last-child {margin-bottom: 0;}
 
+/** Товар. Характеристики **/
+.features__items {display: grid;gap: 1rem;grid-template-columns: repeat(2, 1fr);}
+.features__item {font-size: 1rem;align-items: flex-end;flex-wrap: nowrap ;}
+.features__item:nth-child(n+7) {display: none;}
+.features__item.show {display: flex;}
+.features__name {color: #CBC3DB;flex-grow: 1;position: relative;display: flex;align-items: flex-end;}
+.features__name span {position: relative;}
+.features__name:after {content: '';width: 100%;height: 1px;background-color: #E3DDEE;}
+@media (max-width: 639px) {
+	.features__items {grid-template-columns: repeat(1, 1fr);}
+}
 
+/** Товар. Доставка **/
+.delivery__item + .delivery__item {margin-top: 1rem;}
+.delivery__name {padding: 1rem;background-color: #ffffff;font-size: 1rem;font-weight: bold;border-radius: 5px;position: relative;transition: all 0.3s ease;}
+.delivery__name:hover {color: #ffffff;background-color: #FFA5D8;cursor: pointer;}
+.delivery__name:after {content: '\e901';font-family: 'icomoon';color: #CBC3DB;position: absolute;right: 1rem;}
+.delivery__name:hover:after {color: #ffffff;}
+.delivery__name.active {border-radius: 5px 5px 0 0;}
+.delivery__name.active:after {content: '\e904';}
+.delivery__name.active:hover {color: #3B2865;background-color: #ffffff;}
+.delivery__name.active:hover:after {color: #CBC3DB;}
+.delivery__content {display: none;padding: 0 1rem 1rem 1rem;background-color: #ffffff;}
+.delivery__text {margin-bottom: 1rem;}
+.productView__delivery .delivery__price {margin-top: .25rem;}
+.productView__delivery .delivery__price strong {color: #FFA5D8;}
+/* Товар. Зоны Доставки */
+[class^="zone-"] {margin-top: 1rem;}
+.zone__name {margin-bottom: .75rem;}
+.zone__price {margin-top: .5rem;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Товар. Отзывы */
+.opinion__block + .opinion__block {margin-top: 1rem;}
+.opinion__captcha {position: relative;}
+.opinion__captcha img {position: absolute;right: 0;top: 0}
+.opinion__captcha input {padding-right: 7rem;}
+.captcha__refresh {position: absolute;right: 5rem;top: .75rem;}
+.goodsOpinionRating {margin-left: 1rem;}
+/* Товар. Нет Отзывов */
+.opinion__empty-text-title {font-size: 20px;}
+.opinion__empty-text-subtitle {margin-top: .5rem;}
+.opinion__empty-buttons {margin-top: .5rem;}
+/* Товар. Список Отзывов */
+.opinion__addForm {display: none;margin-top: 2rem;}
+.opinion__addForm .form__pp {text-align: left;}
+.opinion__item {margin-top: 1rem;padding: 1rem;background-color: #ffffff;border-radius: 5px;}
+.opinion__text {width: 100%;margin-top: 1rem;}
+.opinion__name {font-size: 1rem;font-weight: bold;}
+.opinion__date {color: #CBC3DB;margin-top: .5rem;}
+.opinion__avatar {width: 50px;height: 50px;line-height: 50px;background-color: #FFA5D8;border-radius: 100%;font-size: 30px;color: #ffffff;font-family: 'Cormorant Infant', serif;text-align: center;display: block;}
+.opinion__nameBlock {width: calc(100% - 50px - 120px);padding: 0 1rem;}
+.opinion__answer {border: 5px solid #E3DDEE;margin-top: 1rem;padding: 1rem 1rem 0 1rem;}
+/* Товар. Средние значения */
+.opinion__round-title {margin-top: 1rem;}
+.opinion__ratings-round .productView__ratings-icon {font-size: 80px;}
+.opinion__ratings-round .productView__ratings-value {font-size: 20px;}
+.opinion__round {padding: 0 1.5rem;}
+.opinion__round .ratings:before {font-size: 2rem;}
+.opinion__round .ratings .rating:before {font-size: 2rem;}
+.opinion__round-buttons {flex-grow: 1;text-align: right;}
 
 
 
