--- a/files/main.css
+++ b/files/main.css
@@ -269,8 +269,8 @@ h6 {font-size: 0.875rem;}
 /*** Таблицы ***/
 /**************************************/
 .table-box {margin-bottom: 1rem;width: 100%;background-color: #ffffff;border-collapse: collapse;line-height: 1.125rem;text-align: center;border-radius: 0;}
-.table-box > tbody > tr > th, .table-box > tfoot > tr > th, .table-box > tbody > tr > td {border: 1px solid #dae6ec;line-height: 1.125rem;padding: 0.75rem 0.625rem;text-align: center;}
-.table-box thead td, .table-box tfoot td {color: #999999;background-color: #fbfbfb;border: 1px solid #dae6ec;line-height: 1.125rem;padding: 0.75rem;text-align: center;}
+.table-box > tbody > tr > th, .table-box > tfoot > tr > th, .table-box > tbody > tr > td {border: 1px solid #CBC3DB;line-height: 1.125rem;padding: 0.75rem 0.625rem;text-align: center;}
+.table-box thead td, .table-box tfoot td {color: #999999;background-color: #fbfbfb;border: 1px solid #CBC3DB;line-height: 1.125rem;padding: 0.75rem;text-align: center;}
 .table-box tfoot td {color: #656d72;font-weight: bold;}
 .table-box tbody tr td.cell1 {text-align: right;width: 50%;}
 .table-box tbody tr td.cell2 {text-align: left;width: 50%;}
@@ -288,7 +288,7 @@ h6 {font-size: 0.875rem;}
 /**************************************/
 .form__pass {display: flex;align-items: center;position: relative;}
 .showPassBlock {position: absolute;right: .25rem;cursor: pointer;}
-.showPassBlock:before {content: '\e937';margin-right: 0.5rem;color: #dae6ec;font-size: 1.5rem;font-family: 'icomoon';vertical-align: middle;}
+.showPassBlock:before {content: '\e937';margin-right: 0.5rem;color: #CBC3DB;font-size: 1.5rem;font-family: 'icomoon';vertical-align: middle;}
 .showPassBlock.active:before {content: '\e936';}
 .showPassBlock .showPass {vertical-align: middle;display: none;}
 
@@ -302,7 +302,7 @@ h6 {font-size: 0.875rem;}
 .fancybox-bg {background: rgba(59, 40, 101, 0.7);}
 .fancybox-close-small {line-height: 1;}
 .fancybox-close-small:hover {color: #FFA5D8;background: transparent;}
-.fancybox-content {max-width: 52rem;padding: 2.75rem 2rem 2rem 2rem;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(216, 200, 182, 0.4);border-radius: 1rem;transition: all 0.3s ease;}
+.fancybox-content {max-width: 52rem;padding: 2rem;background-color: #ffffff;box-shadow: 0px 4px 10px rgba(216, 200, 182, 0.4);border-radius: 1rem;transition: all 0.3s ease;}
 .fancybox-content.modal {padding-top: 4rem;max-width: 28rem;transform: translateY(200%);overflow: visible;}
 .fancybox-slide--complete .fancybox-content.modal {transform: translateY(0);}
 .fancybox-content .block__title {margin-bottom: 1.5rem;}
@@ -320,7 +320,7 @@ h6 {font-size: 0.875rem;}
 /*** Выпадающее обхекты ***/
 /**************************************/
 .dropdown {position: relative;}
-.dropdown__content {display: none;max-width: 28rem;margin-top: -1px;padding: 2rem;right: 0;top: 4rem;height: auto;background: #ffffff;border: 1px solid #dae6ec;border-radius: 1rem;position: absolute;z-index: 11;transition: all 0.3s ease-in-out;}
+.dropdown__content {display: none;max-width: 28rem;margin-top: -1px;padding: 2rem;right: 0;top: 4rem;height: auto;background: #ffffff;border: 1px solid #CBC3DB;border-radius: 1rem;position: absolute;z-index: 11;transition: all 0.3s ease-in-out;}
 .opened .dropdown__content, .dropdown__content.opened {display: block;}
 .dropdown__open {position: relative;cursor: pointer;}
 @media all and (min-width: 768px) {
@@ -405,7 +405,7 @@ h6 {font-size: 0.875rem;}
 /*** Страницы новостей ***/
 /**************************************/
 /*** Страница: Список новостей ***/
-.news__list .news__item {margin-bottom: 2rem;padding: 1.5rem;border: 1px solid #dae6ec;}
+.news__list .news__item {margin-bottom: 2rem;padding: 1rem;border: 1px solid #CBC3DB;}
 .news__list .news__item:last-child {margin-bottom: 0;}
 .news__list .news__title {margin: 0 0 1rem 0;font-weight: bold;display: block;}
 .news__list .news__text {word-break: break-all;font-size: 0.875rem;}
@@ -420,7 +420,6 @@ h6 {font-size: 0.875rem;}
 .news__buttons a {padding: 0 1.5rem;}
 .newsListBlockItemFiles {margin-top: 1rem;overflow: hidden;word-break: break-all;}
 .page-news .news__date {position: relative;text-align: right;margin-top: 1rem;}
-.page-news .htmlDataBlock {padding: 1.5rem;border: 1px solid #dae6ec;}
 .page-news .htmlDataBlock img {margin-bottom: 1rem;}
 
 
@@ -431,11 +430,11 @@ h6 {font-size: 0.875rem;}
 .CompareGoods .buttons i {margin-right: 6px;vertical-align: middle;}
 .CompareGoods .buttons span {margin-left: 3px;vertical-align: middle;}
 .CompareGoods__nav {width: 100%;margin-bottom: 2rem;position: relative;display: flex;align-items: center;flex-wrap: wrap;justify-content: space-between;}
-.CompareGoods__nav .owl-nav {position: relative;}
+.CompareGoods__nav .owl-nav {position: relative;margin: 0;}
 .CompareGoods__filter {display: -ms-flexbox;display: -webkit-flex;display: flex;line-height: 30px;}
 .CompareGoods__filter .button {padding: 0 1rem;}
 .CompareGoods__filter .hide {margin-left: 3px;}
-.CompareGoods__switch {background: #eef2f4;display: inline-block;position: relative;width: 60px;height: 30px;border-radius: 1.5rem;z-index: 0;margin: 0 0.625rem 0 0;padding: 0;border: none;cursor: pointer;transition-duration: 300ms;}
+.CompareGoods__switch {background: #CBC3DB;display: inline-block;position: relative;width: 60px;height: 30px;border-radius: 1.5rem;z-index: 0;margin: 0 0.625rem 0 0;padding: 0;border: none;cursor: pointer;transition-duration: 300ms;}
 .CompareGoods__switch:after {background: #ffffff;content: '';position: absolute;top: 3px;left: 3px;height: 1.5rem;width: 1.5rem;border-radius: 17px;transition-duration: 300ms;z-index: 1;}
 .CompareGoods__switch.switch-on {background: #FFA5D8;}
 .CompareGoods__switch.switch-on:after {left: 33px;}
@@ -448,7 +447,7 @@ h6 {font-size: 0.875rem;}
 
 /** Таблица сравнений **/
 .CompareGoodsTableTbody {width: 100%;}
-.CompareGoodsTableTbody > div {border-top: 1px solid #dae6ec;width: 100%;margin-bottom: 1rem;display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;}
+.CompareGoodsTableTbody > div {border-top: 1px solid #CBC3DB;width: 100%;margin-bottom: 1rem;display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;}
 .CompareGoodsTableTbody > div:not(.CompareGoodsTableTbodyComparisonLine) {border: 0;text-align: center;}
 .CompareGoodsTableTbody > div:not(.CompareGoodsTableTbodyComparisonLine) .cell {display: none;}
 .CompareGoodsTableTbody > div .cell {width: 100%;padding: 1rem 0 0.625rem;}
@@ -456,7 +455,7 @@ h6 {font-size: 0.875rem;}
 .CompareGoodsTableTbody > div .cell input {display: none;}
 .CompareGoodsTableTbody .image a:not(.remove) {display: block;line-height: 130px;}
 .CompareGoodsTableTbody .owl-item .image img {display: inline-block;width: auto;max-width: 100%;}
-.CompareGoodsTableTbody .remove {color: #dae6ec;background: #ffffff;border: 1px solid #dae6ec;position: absolute;top: 0;right: 0;z-index: 2;width: 2rem;height: 2rem;}
+.CompareGoodsTableTbody .remove {color: #CBC3DB;background: #ffffff;border: 1px solid #CBC3DB;position: absolute;top: 0;right: 0;z-index: 2;width: 2rem;height: 2rem;}
 .CompareGoodsTableTbody .remove:hover {color: #ffffff;background: #FFA5D8;border-color: #FFA5D8;}
 .CompareGoodsTableTbody .remove i {display: block;font-size: 1rem;line-height: 1.95rem;}
 .CompareGoodsTableTbody .CompareCheckbox {display: none;margin: 0 0.625rem 0 0;vertical-align: middle;}
@@ -491,7 +490,7 @@ h6 {font-size: 0.875rem;}
 .delivery__zone > div {margin-top: 1rem;}
 .stages__list {display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;width: 100%;margin-bottom: 2rem;}
 .stages__list .stages {width: 25%;position: relative;font-size: 1.125rem;line-height: 2em;padding-top: 2rem;}
-.stages__list .stages:after {content: '';position: absolute;top: calc(50% + 1rem);left: 0;width: 70%;height: 2px;margin-top: -1px;background: #dae6ec;opacity: 0.5;filter: alpha(opacity=50);}
+.stages__list .stages:after {content: '';position: absolute;top: calc(50% + 1rem);left: 0;width: 70%;height: 2px;margin-top: -1px;background: #CBC3DB;opacity: 0.5;filter: alpha(opacity=50);}
 .stages__list .stages .title, .stages__list .stages a {display: block;width: 100%;height: 100%;position: absolute;top: 0;left: 0;font-size: 26px;line-height: 1;font-weight: 600;cursor: default;}
 .stages__list .stages a:hover .title {cursor: pointer;}
 .stages__list .stages.active {opacity: 1;filter: alpha(opacity=100);}
@@ -629,11 +628,11 @@ h6 {font-size: 0.875rem;}
 #menu .catalog__items {display: none;}
 #menu .catalog__item {display: none;border: 0;transition: all 0.5s ease;}
 #menu .catalog__item.show {display: block;}
-#menu .catalog__item[data-level="1"] {width: 50%;}
+#menu .catalog__item[data-level="1"] {width: 50%;margin-bottom: .5rem;}
 #menu .catalog__item[data-level="2"] {display: block;}
-#menu .catalog__link {width: 100%;padding: .75rem .25rem;font-size: 1rem;line-height: 1;border-radius: 20px;}
+#menu .catalog__link {width: 100%;padding: 1rem .25rem;font-size: 1rem;line-height: 1;border-radius: 20px;}
 #menu .catalog__link[data-level="1"] {font-weight: bold;}
-#menu .catalog__link[data-level="2"] {color:#776994;}
+#menu .catalog__link[data-level="2"] {color:#776994;padding: .5rem .25rem;}
 #menu .catalog__link[data-level="2"]:hover {color:#FFA5D8;}
 #menu .catalog__item.hovered .catalog__link {background: #FFA5D8;color: #ffffff;padding: .75rem 1.25rem;}
 #menu .catalog__item[data-level="0"].parent .open {line-height: 1;font-size: .75rem;right: 2rem;position: absolute;}
@@ -1332,26 +1331,26 @@ h6 {font-size: 0.875rem;}
 /*** Новости ***/
 /**************************************/
 #news {margin-bottom: 0;}
-.news_list.loading {height: 406px;}
-.news__title {margin-top: 1rem;font-size: 1.25rem;font-weight: bold;display: block;text-align: center;height: 3rem;overflow: hidden;}
-.news__desciprion {display: none;}
-.news__image {position: relative;height: 266px;border: 3px solid #E3DDEE;border-radius: 20px;}
-.news__image img {border-radius: 1rem;}
-.news__content {margin-top: 4rem;text-align: center;}
-.news__button {margin-top: 10px;}
-.news__button i {margin-left: .5rem;}
-.news__date {left: calc(50% - 35px);bottom: -35px;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 70px;height: 70px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
-.news__item:hover .news__date {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
-.news__date .month {text-transform: lowercase;}
+#news .news_list.loading {height: 406px;}
+#news .news__title {margin-top: 1rem;font-size: 1.25rem;font-weight: bold;display: block;text-align: center;height: 3rem;overflow: hidden;}
+#news .news__desciprion {display: none;}
+#news .news__image {position: relative;height: 266px;border: 3px solid #E3DDEE;border-radius: 20px;}
+#news .news__image img {border-radius: 1rem;}
+#news .news__content {margin-top: 4rem;text-align: center;}
+#news .news__button {margin-top: 10px;}
+#news .news__button i {margin-left: .5rem;}
+#news .news__date {left: calc(50% - 35px);bottom: -35px;font-size: 1rem;color: #ffffff;background: linear-gradient(180deg, #FFB6DF 0%, #FF72C2 100%);outline: 1rem solid rgba(255, 165, 216, 0.2);width: 70px;height: 70px;border-radius: 100%;text-align: center;flex-direction: column;position: absolute;z-index: 2;}
+#news .news__item:hover .news__date {background: linear-gradient(180deg, #DECFFF 0%, #9579D1 100%);}
+#news .news__date .month {text-transform: lowercase;}
 /*** Новости. Адаптивность ***/
 @media (max-width: 1199px) {
-	.news__image {height: 220px;}
+	#news .news__image {height: 220px;}
 }
 @media (max-width: 991px) {
-	.news__image {height: 260px;}
+	#news .news__image {height: 260px;}
 }
 @media (max-width: 639px) {
-	.news__image {height: 214px;}
+	#news .news__image {height: 214px;}
 }
 
 
@@ -1485,7 +1484,7 @@ h6 {font-size: 0.875rem;}
 .qty a + a {margin-left: 2px;border-radius: 0 5px 5px 0;}
 .qty a:hover {color: #FFA5D8;}
 /* Товар. Модификации */
-.goodsModificationsBlock {display: grid;gap: 20px;grid-template-columns: repeat(2, 1fr);}
+.goodsModificationsPropertys {display: grid;gap: 20px;grid-template-columns: repeat(2, 1fr);}
 .goodsModificationsProperty {background-color: #ffffff;border-radius: 10px;padding: 10px 30px 10px 10px;position: relative;}
 .goodsModificationsProperty label {color: #CBC3DB;font-weight: bold;margin-bottom: .25rem;display: block;}
 .goodsModificationsProperty select {height: 20px;padding: 0;border: 0;}
@@ -1498,6 +1497,7 @@ h6 {font-size: 0.875rem;}
 .productView__links a span {display: none;}
 .productView__links a {margin-left: 1rem;width: 60px;height: 60px;line-height: 62px;font-size: 24px;color: #FFA5D8;background-color: #ffffff;border: 2px solid #FFA5D8;box-shadow: 0px 4px 10px rgba(174, 143, 237, 0.3);border-radius: 100%;text-align: center;}
 .productView__links a:hover {color: #ffffff;background-color: #FFA5D8;}
+.productView__addto {margin-top: 2rem;}
 .productView__addto .button {height: 60px;line-height: 60px;flex-grow: 1;font-size: 18px;}
 .productView__addto .button + .button {margin-left: 1rem;}
 .productView__addto .button i {display: none;}
@@ -1520,8 +1520,8 @@ h6 {font-size: 0.875rem;}
 	.productView__icon i {font-size: 30px;}
 	.productView__inner.justify-between {flex-wrap: nowrap;}
 	.productView__campaign-percent {width: 100%;margin: 0 0 1rem 0;}
-	.goodsModificationsBlock {display: block;}
-	.goodsModificationsProperty {margin-bottom: 1rem;}
+	.goodsModificationsPropertys {display: block;}
+	.goodsModificationsProperty + .goodsModificationsProperty {margin-top: 1rem;}
 	.productView__addto .add-notify {margin-bottom: 1rem !important;}
 }
 @media (max-width: 374px) {
@@ -1601,18 +1601,25 @@ h6 {font-size: 0.875rem;}
 .opinion__round .ratings .rating:before {font-size: 2rem;}
 .opinion__round-buttons {flex-grow: 1;text-align: right;}
 
-.productViewMod {background-color: #F8F1F5;}
-.productViewMod .productView__images {width: 300px;}
-.productViewMod .productView__shop {width: calc(100% - 300px);}
-.productViewMod .productView__inner {display: none;}
-.productViewMod .productView__addto .button {padding: 0 2rem;}
-.productViewMod .productView__addto .button.quick {display: none;}
-.productViewMod .productView__tabs {display: none;}
-.productViewMod .thumblist__image {width: 86px;height: 86px;}
 
-
-
-
+/**************************************/
+/*** Быстрый просмотр ***/
+/**************************************/
+.fancybox-content.productViewBlock {background-color: #F8F1F5;}
+.fancybox-content .productView__images {width: 300px;}
+.fancybox-content .productView__shop {width: calc(100% - 300px);}
+.fancybox-content .productView__inner.justify-between {display: none;}
+.fancybox-content .productView__addto .button.quick {display: none;}
+.fancybox-content .productView__tabs {display: none;}
+.fancybox-content .thumblist__image {width: 86px;height: 86px;}
+.fancybox-content .goodsModificationsPropertys {display: block;}
+.fancybox-content .goodsModificationsProperty + .goodsModificationsProperty {margin-top: 1rem;}
+.fancybox-content .productView__addto {margin-top: 1rem;}
+.productViewQuick {max-width: 60rem;}
+.productViewMod {max-width: 30rem;}
+.productViewMod .productView__images {display: none;}
+.productViewMod .productView__shop {width: 100%;padding: 0;}
+.productViewMod .productView__text {display: none;}
 
 
 
@@ -1754,6 +1761,7 @@ h6 {font-size: 0.875rem;}
 .overlay-preheader {top: 0;left: 0;width: 100%;height: 316px;background-position: top;background-size: cover;z-index: 0;position: absolute;}
 .index .overlay-header {bottom: -130%;left: -10%;width: 120%;height: 175%;border-radius: 100% 100% 0 0;background: #F8F1F5;position: absolute;}
 .index .overlay-preheader {height: 1000px;background-position: center;z-index: -1;}
+.page-goods .overlay-preheader {height: 260px;}
 .overlay-prefooter {background-image: url('{ASSETS_IMAGES_PATH}bg.jpg?design=THEMENAME');}
 .overlay-prefooter {bottom: 0;left: 0;width: 100%;height: 1000px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
 .overlay-footer {top: -110%;left: -10%;width: 120%;height: 175%;border-radius: 0 0 100% 100%;background: #F8F1F5;position: absolute;}
